--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <div class="carousel flex">
-            <div class="button-left">
-                <button>scorri a sinistra</button>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <div id="app">
+        <main>
+            <div class="carousel flex">
+                <div class="button-left">
+                    <button>scorri a sinistra</button>
+                </div>
+                <div class="button-right">
+                    <button>scorri a destra</button>
+                </div>
             </div>
-            <div class="button-right">
-                <button>scorri a destra</button>
-            </div>
-        </div>
-    </main>
+        </main>
+    </div>
+    
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
