provo a stampare in pagina immagine

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <div class="button-left">
                     <button>scorri a sinistra</button>
                 </div>
+                <div class="wrapper">
+                    <img src="imgArray" :calss="{index===activeIndex}" alt="img">
+                </div>
                 <div class="button-right">
                     <button>scorri a destra</button>
                 </div>
