tentativo 2 stampa img

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <button>scorri a sinistra</button>
                 </div>
                 <div class="wrapper">
-                    <img src="imgArray" :calss="{index===activeIndex}" alt="img">
+                    <img src="imgArray"  :class="index===activeIndex ?'visible' : '', errorClass" alt="img">
                 </div>
                 <div class="button-right">
                     <button>scorri a destra</button>
