--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="button-left" @click="previousSlide">
                     <button>scorri a sinistra</button>
                 </div>
-                <img :src="imgArray[activeIndex]" alt="">
+                <img :src="items.image[activeIndex]" alt="">
                 
                 <div class="button-right" @click="nextSlide">
                     <button>scorri a destra</button>
